Update files and content

--- a/tarpaulin.html
+++ b/tarpaulin.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tarpaulin Edits - Jezryl Robis Portfolio</title>
+  <title>Design Edits - Jezryl Robis Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -22,7 +22,7 @@
     </nav>
   </header>
 
-  <section id="tarpaulin-edits">
+  <section>
     <h2>Tarpaulin Edits</h2>
     <div class="gallery">
       <!-- Add your tarpaulin edit images here -->
@@ -33,6 +33,35 @@
 	  <a href="images/tarpaulin4.jpg" target="_blank"><img src="images/tarpaulin4.jpg" alt="Tarpaulin Edit 4"></a>
       <a href="images/tarpaulin5.jpg" target="_blank"><img src="images/tarpaulin5.jpg" alt="Tarpaulin Edit 5"></a>
       <a href="images/tarpaulin6.jpg" target="_blank"><img src="images/tarpaulin6.jpg" alt="Tarpaulin Edit 6"></a>
+	  
+    </div>
+  </section>
+  
+  <section>
+    <h2>Logo Edits</h2>
+    <div class="gallery">
+      <!-- Add your tarpaulin edit images here -->
+      <!-- Example: -->
+      <a href="images/logo1.jpg" target="_blank"><img src="images/logo1.jpg" alt="Logo Edit 1"></a>
+      <a href="images/logo2.jpg" target="_blank"><img src="images/logo2.jpg" alt="Logo Edit 2"></a>
+      <a href="images/logo3.jpg" target="_blank"><img src="images/logo3.jpg" alt="Logo Edit 3"></a>
+	  <a href="images/logo4.jpg" target="_blank"><img src="images/logo4.jpg" alt="Logo Edit 4"></a>
+      <a href="images/logo5.jpg" target="_blank"><img src="images/logo5.jpg" alt="Logo Edit 5"></a>
+      <a href="images/logo6.jpg" target="_blank"><img src="images/logo6.jpg" alt="Logo Edit 6"></a>
+    </div>
+  </section>
+  
+  <section>
+    <h2>Invitation Edits</h2>
+    <div class="gallery">
+      <!-- Add your tarpaulin edit images here -->
+      <!-- Example: -->
+      <a href="images/invitation1.jpg" target="_blank"><img src="images/invitation1.jpg" alt="Invitation Edit 1"></a>
+      <a href="images/invitation2.jpg" target="_blank"><img src="images/invitation2.jpg" alt="Invitation Edit 2"></a>
+      <a href="images/invitation3.jpg" target="_blank"><img src="images/invitation3.jpg" alt="Invitation Edit 3"></a>
+	  <a href="images/invitation4.jpg" target="_blank"><img src="images/invitation4.jpg" alt="Invitation Edit 4"></a>
+      <a href="images/invitation5.jpg" target="_blank"><img src="images/invitation5.jpg" alt="Invitation Edit 5"></a>
+      <a href="images/invitation6.jpg" target="_blank"><img src="images/invitation6.jpg" alt="Invitation Edit 6"></a>
     </div>
   </section>
 
