Updated HTML and CSS files, deleted tarpaulin7.png

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
       <li>
         <h3>On-the-Job Training Intern</h3>
         <h4>Mount Carmel Rural Bank Inc., Tagaytay Branch</h4>
-        <p>January 2023 - June 2023</p>
+        <p>January 23, 2023 - June 9, 2023</p>
         <ul>
-          <li>• Assisting and communicating with clients.</li>
-          <li>• Data tagging and encoding of data in system.</li>
+		  <li>•	Effectively communicated with clients and provided assistance.</li>
+          <li>• Conducted data tagging and encoded data into the system.</li>
+          <li>• Managed backup copies of both hardcopy and softcopy documents, ensuring data integrity.</li>
         </ul>
       </li>
     </ul>
@@ -60,7 +61,11 @@
             <h4>TVL - Information and Communication Technology Strand</h4>
             <p>Tagaytay City National High School</p>
             <p>June 2017 - April 2019</p>
-        </li>
+			<ul>
+			  <p><li>• Academic Achievement in Tech-Voc Education</li></p>
+			  <p><li>• Best in Research</li></p>
+			</ul>
+			</li>	
   </section>
 
 	<section id="seminars">
@@ -77,10 +82,10 @@
 	
 
   <section id="skills">
-    <h2>Skills</h2>
+    <h2>Technical Skills</h2>
     <ul class="skills-list">
       <li>
-        <span class="skill-name">MS Office (Word, Excel, PowerPoint, Publisher)</span>
+        <span class="skill-name">• Programming Language: PHP</span>
         <!--div class="rating">
           <span class="star active"></span>
           <span class="star active"></span>
@@ -90,22 +95,22 @@
         </div-->
       </li>
       <li>
-        <span class="skill-name">Adobe Photoshop</span>
+        <span class="skill-name">• Database Management: MySQL</span>
       </li>
       <li>
-        <span class="skill-name">Video Editing</span>
+        <span class="skill-name">• Video Editing</span>
       </li>
       <li>
-        <span class="skill-name">Programming (PHP and JavaScript)</span>
+        <span class="skill-name">• MS Office (Word, Excel, PowerPoint, Publisher)</span>
       </li>
       <li>
-        <span class="skill-name">Web Design (CSS and HTML)</span>
+        <span class="skill-name">• Adobe Photoshop</span>
       </li>
       <li>
-        <span class="skill-name">Database Management (MySQL)</span>
+        <span class="skill-name">• Video Editing</span>
       </li>
       <li>
-        <span class="skill-name">Project Documentation</span>
+        <span class="skill-name">• Project Documentation</span>
       </li>
     </ul>
   </section>
