--- a/tarpaulin.html
+++ b/tarpaulin.html
@@ -15,6 +15,7 @@
         <li><a class="nav-link" href="index.html#about">About</a></li>
         <li><a class="nav-link" href="index.html#experience">Experience</a></li>
         <li><a class="nav-link" href="index.html#education">Education</a></li>
+		<li><a class="nav-link" href="index.html#seminars">Seminars</a></li>
         <li><a class="nav-link" href="index.html#skills">Skills</a></li>
         <li><a class="nav-link" href="index.html#projects">Projects</a></li>
         <li><a class="nav-link" href="index.html#contact">Contact</a></li>
