--- a/videos.html
+++ b/videos.html
@@ -15,6 +15,7 @@
         <li><a class="nav-link" href="index.html#about">About</a></li>
         <li><a class="nav-link" href="index.html#experience">Experience</a></li>
         <li><a class="nav-link" href="index.html#education">Education</a></li>
+		<li><a class="nav-link" href="index.html#seminars">Seminars</a></li>
         <li><a class="nav-link" href="index.html#skills">Skills</a></li>
         <li><a class="nav-link" href="index.html#projects">Projects</a></li>
         <li><a class="nav-link" href="#contact">Contact</a></li>
@@ -28,20 +29,26 @@
     <div class="video-item">
       <h3 class="video-title">Cracklings Commercial</h3>
       <p class="video-description">Final project: A 30-second to 2-minute commercial video for ITEC93 class.</p>
-      <video width="560" height="315" controls>
-        <source src="videos/video1.mp4" type="video/mp4">
-      </video>
+      <div class="video-container">
+        <video width="560" height="315" controls>
+          <source src="videos/video1.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
     <div class="video-item">
       <h3 class="video-title">I love Myself Project</h3>
       <p class="video-description">Philosophy class group final project: A 5 to 10-minute self-edited video presentation on 'Loving Myself'.</p>
-      <video width="560" height="315" controls>
-        <source src="videos/video2.mp4" type="video/mp4">
-      </video>
+      <div class="video-container">
+        <video width="560" height="315" controls>
+          <source src="videos/video2.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
-    <!-- Add more video items as needed -->
   </div>
 </section>
+
+
+
 
 
   <footer>
