--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="profile">
       <img src="images/profile.jpg" alt="Profile Picture">
       <h1>Jezryl Robis</h1>
-      <p>"Hello there! I'm Jezryl Robis, a recent graduate and an Information Technology professional. With a passion for technology and a drive for innovation, I'm excited to embark on a journey where I can leverage my skills and knowledge to make a positive impact in the digital realm."</p>
+      <p>"Hello there! I'm Jezryl Robis, a recent graduate of Information Technology. With a passion for technology and a drive for innovation, I'm excited to embark on a journey where I can leverage my skills and knowledge to make a positive impact in the digital realm."</p>
     </div>
   </section>
 
@@ -42,6 +42,19 @@
 		  <li>•	Effectively communicated with clients and provided assistance.</li>
           <li>• Conducted data tagging and encoded data into the system.</li>
           <li>• Managed backup copies of both hardcopy and softcopy documents, ensuring data integrity.</li>
+        </ul>
+      </li>
+    </ul>
+	<ul class="experience-list">
+      <li>
+        <h3>Job-Order</h3>
+        <h4>City Government of Tagaytay</h4>
+        <p>September 13, 2023 – Present</p>
+        <ul>
+		  <li>• Managed RPTA system for administrative tasks: filing, data entry, and correspondence.</li>
+          <li>• Handled inquiries from property owners regarding assessments and tax procedures.</li>
+          <li>• Verified property data and maintained accurate records in RPTA (Real Property Tax Administration) system.</li>
+		  <li>• Organized, sorted, and printed documents for tax revision, ensuring accuracy and timeliness.</li>
         </ul>
       </li>
     </ul>
@@ -111,6 +124,9 @@
       </li>
       <li>
         <span class="skill-name">• Project Documentation</span>
+      </li>
+      <li>
+        <span class="skill-name">• Freelance Online Assistance Provider</span>
       </li>
     </ul>
   </section>
