--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <ul class="contact-list">
       <li><strong>Email:</strong> robisjezryl@gmail.com</li>
       <li><strong>Phone:</strong> +639925502175</li>
-      <li><strong>Address:</strong> Tolentino West, Tagaytay City</li>
+      <li><strong>Address:</strong> Silang, Cavite</li>
     </ul>
   </section>
 
